Fixed vertical align

--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ main article {
 
 main article figure {
     margin-left: 60px;
+    margin-top: 3%;
     position: absolute;
     top: 0;
     left: 0;
